--- a/07_Django/Django_aula/blog/templates/blog/index.html
+++ b/07_Django/Django_aula/blog/templates/blog/index.html
@@ -1,11 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BLOG</title>
-</head>
-<body>
-    <h1>BLOG 2</h1>
-</body>
-</html>
+{% extends "global/base.html" %}
+
+{% block texto %} BLOG 3 {% endblock texto %}
