--- a/07_Django/Django_aula/home/templates/home/index.html
+++ b/07_Django/Django_aula/home/templates/home/index.html
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOME</title>
-</head>
-<body>
-    <h1>HOME 2</h1>
-</body>
-</html>
+{% extends "global/base.html" %}
+
+{% block texto %} HOME{% endblock texto %} 
+
