modified:   07_Django/Django_aula/aulas.txt 	modified:   07_Django/Django_aula/base/global/base.html 	modified:   07_Django/Django_aula/base/global/partials/head.html 	new file:   07_Django/Django_aula/base/global/partials/menu.html 	new file:   07_Django/Django_aula/base/global/partials/postblock.html 	deleted:    07_Django/Django_aula/base/static/global/css/red.css 	new file:   07_Django/Django_aula/base/static/global/css/style.css 	new file:   07_Django/Django_aula/blog/data.py 	modified:   07_Django/Django_aula/blog/templates/blog/exemplo.html 	modified:   07_Django/Django_aula/blog/templates/blog/index.html 	modified:   07_Django/Django_aula/blog/urls.py 	modified:   07_Django/Django_aula/blog/views.py 	deleted:    07_Django/Django_aula/home/static/home/css/blue.css 	modified:   07_Django/Django_aula/home/templates/home/index.html 	modified:   07_Django/Django_aula/home/urls.py 	modified:   07_Django/Django_aula/home/views.py

--- a/07_Django/Django_aula/home/templates/home/index.html
+++ b/07_Django/Django_aula/home/templates/home/index.html
@@ -1,4 +1,5 @@
 {% extends "global/base.html" %}
 
-{% block texto %} HOME{% endblock texto %} 
-
+{% block texto %}
+ {{ text }}
+{% endblock texto %}
