--- a/07_Django/Django_aula/base/global/partials/head.html
+++ b/07_Django/Django_aula/base/global/partials/head.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="{% static "home/css/blue.css" %}">
-    <link rel="stylesheet" href="{% static "global/css/red.css" %}">
+    <title>{{ title }}Site do Alexandre</title>
+    <link rel='stylesheet' href='{% static 'global/css/style.css' %}'>
 </head>
 <body>
