--- a/07_Django/Django_aula/blog/templates/blog/exemplo.html
+++ b/07_Django/Django_aula/blog/templates/blog/exemplo.html
@@ -1,3 +1,3 @@
 {% extends "global/base.html" %}
 
-{% block texto %} EXEMPLO 3{% endblock texto %}
+{% block texto %} {{ text }} {% endblock texto %}
