modified:   .gitignore 	modified:   07_Django/Django_aula/aulas.txt 	modified:   07_Django/Django_aula/base/global/base.html 	modified:   07_Django/Django_aula/base/global/partials/menu.html 	modified:   07_Django/Django_aula/base/global/partials/postblock.html 	modified:   07_Django/Django_aula/base/static/global/css/style.css 	new file:   07_Django/Django_aula/blog/templates/blog/post.html 	modified:   07_Django/Django_aula/blog/urls.py 	modified:   07_Django/Django_aula/blog/views.py 	modified:   07_Django/Django_aula/conhecendo_django/settings.py 	new file:   07_Django/Django_aula/home/static/home/css/style.css

--- a/07_Django/Django_aula/base/static/global/css/style.css
+++ b/07_Django/Django_aula/base/static/global/css/style.css
@@ -7,6 +7,15 @@
   box-sizing: border-box;
 }
 
+a {
+  color: rgb(22, 165, 253);
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
 html {
   font-size: 62.5%;
 }
@@ -30,8 +39,24 @@ body {
   box-shadow: 5px 2px 5px rgba(0, 0, 0, 0.6);
 }
 
+.menu {
+  background: black;
+  padding: 0 1.5rem;
+}
+
+.menu__links {
+  list-style: none;
+  display: flex;
+}
+
+.menu__links a {
+  display: block;
+  color: #fff;
+  padding: 1.5rem;
+}
+
 @media (min-width: 600px) {
-  .content {
+  .content:not(:has(.single-post)) {
     grid-template-columns: repeat(auto-fill, minmax(32rem, 1fr));
   }
 }
